basic app running

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="assets/css/bootstrap.css">
 	</head>
 	<body ng-app="profile">
-
+		
 		<div ng-view></div>
 
 		<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
@@ -23,6 +23,8 @@
 		<script src="app/components/home/homeController.js"></script>
 		<script src="app/components/students/studentService.js"></script>
 		<script src="app/components/students/studentController.js"></script>
+		<script src="app/components/info/infoService.js"></script>
+		<script src="app/components/info/infoController.js"></script>
 
 		<!-- <script>
 			var db = firebase.database();
