initial phase of login done

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 		<script src="app/components/students/studentController.js"></script>
 		<script src="app/components/info/infoService.js"></script>
 		<script src="app/components/info/infoController.js"></script>
+		<script src="app/components/profile/profileService.js"></script>
+		<script src="app/components/profile/profileController.js"></script>
 
 		<!-- <script>
 			var db = firebase.database();
