--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="description" content="All the students studying abroad">
 		<meta name="keywords" content="university, colleges, USA, Pranjal, Singi, Pranjal Singi">
 		<link rel="stylesheet" href="assets/css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/custom.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/star-rating-svg.css">
 	</head>
 	<body ng-app="profile">
 		
@@ -13,6 +15,7 @@
 		<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 		<script src="app/firebase-init.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.js"></script>
+		<script type="text/javascript" src="assets/js/jquery.star-rating-svg.js"></script>
 		<script src="assets/js/bootstrap.js"></script>
 		<script src="assets/js/angular.js"></script>
 		<script src="assets/js/angular-route.js"></script>
