changed title to Scholar Review

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>home Page</title>
+		<title>Scholar Review</title>
 		<meta name="description" content="All the students studying abroad">
 		<meta name="keywords" content="university, colleges, USA, Pranjal, Singi, Pranjal Singi">
 		<link rel="stylesheet" href="assets/css/bootstrap.css">
