commit in between to save, review and profile page working

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 		<script src="app/components/info/infoController.js"></script>
 		<script src="app/components/profile/profileService.js"></script>
 		<script src="app/components/profile/profileController.js"></script>
+		<script src="app/components/review/reviewService.js"></script>
+		<script src="app/components/review/reviewController.js"></script>
 
 		<!-- <script>
 			var db = firebase.database();
