added Google analytics

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 		<link rel="stylesheet" href="assets/css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/custom.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/star-rating-svg.css">
+
+		<!-- Global Site Tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-106971369-1"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments)};
+			gtag('js', new Date());
+
+			gtag('config', 'UA-106971369-1');
+		</script>
+
 	</head>
 	<body ng-app="profile">
 		
