--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Scholar Review</title>
+		<title>Scholar Reviews</title>
 		<meta name="description" content="All the students studying abroad">
 		<meta name="keywords" content="university, colleges, USA, Pranjal, Singi, Pranjal Singi">
 		<link rel="stylesheet" href="assets/css/bootstrap.css">
@@ -22,7 +22,7 @@
 	<body ng-app="profile">
 		
 		<div ng-view></div>
-
+		
 		<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 		<script src="app/firebase-init.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.js"></script>
