--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 	<body ng-app="profile">
 		
 		<div ng-view></div>
-		
+		<p style="text-align: center">Developed by <a href="http://pranjalsingi.me" target="_blank">Pranjal Singi</a></p>
+		<br>	
 		<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 		<script src="app/firebase-init.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.js"></script>
