--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
 	<body ng-app="profile">
 		
 		<div ng-view></div>
-		<br>
-		<p style="text-align: center">Developed by <a href="http://pranjalsingi.me" target="_blank">Pranjal Singi</a></p>
-		<br>	
+		<footer>
+			<p style="text-align:center">Scholar Strategy Reviews (SSReviews) is a service offered by <a href="http://scholarstrategy.com">www.scholarstrategy.com</a> - leading counseling provider for 'MS/MBA in USA' applications.</p>
+			<br>
+			<p style="text-align: center">Developed by <a href="http://pranjalsingi.me" target="_blank">Pranjal Singi</a></p>
+			<br>
+		</footer>
 		<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 		<script src="app/firebase-init.js"></script>
 		<script type="text/javascript" src="assets/js/jquery.js"></script>
