Changed Pranjal's domain name

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div ng-view></div>
 		<footer>
 			<p style="text-align:center">Scholar Strategy Reviews (SSReviews) is a service offered by <a href="http://scholarstrategy.com">www.scholarstrategy.com</a> - leading counseling provider for 'MS/MBA in USA' applications.</p>
-			<p style="text-align: center">Developed by <a href="http://pranjalsingi.me" target="_blank">Pranjal Singi</a></p>
+			<p style="text-align: center">Developed by <a href="http://pranjalsingi.com" target="_blank">Pranjal Singi</a></p>
 			<br>
 		</footer>
 		<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
